# personal-brand-os

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/author_brain/: profile.json  status.json
data/seeds/: author_profile.json  content_plan.json  daily_brief_sources.json  editorial_strategy.json  trend_sources.json  writing_dna.json
docs/: RENDER_DEPLOY.md  product-backlog.md  redesign-plan.md
src/post_agent/: __init__.py  __main__.py  ai_context.py  ai_gateway.py  ai_pipeline.py  author_brain.py  author_profile.py  bot_rules.py  daily_brief.py  export.py  generator.py  idea_vault.py  knowledge.py  knowledge_graph.py  learning.py  memory.py  memory_notes.py  production.py  remote_sync.py  storage.py  text_posts.py  thinking_engine.py  trend_radar.py  web.py  writing_dna.py
tests/: test_ai_pipeline.py  test_author_brain.py  test_bot_rules.py  test_daily_brief.py  test_idea_vault.py  test_knowledge.py  test_memory_notes.py  test_remote_sync.py  test_text_posts.py  test_thinking_learning.py  test_trend_radar.py
tools/: serve_daily_brief.py
